# Organoid-Intelligence-Simulation

./: CMakeLists.txt  Dockerfile  NOTES.md  README.md  biodynamo_simulation.cpp  brian2_simulation.py  install_biodynamo.sh  mlp_model.py  run.sh
OLD/: NOTES.md  README.md  biodynamo_simulation.cpp  mlp_interface.py  run.sh
